메시지 전송 메서드 추가